<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

  <prerequisites>
    <maven>3.0</maven>
  </prerequisites>

	<groupId>com.odcgroup.ds.tests</groupId>
	<artifactId>com.odcgroup.ds.tests.all</artifactId>
	<version>2015.8.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Design Studio Tests</name>

	<properties>
	  <tycho-version>0.10.0</tycho-version>
	  <ocs-version>6.0.0-SNAPSHOT</ocs-version>
	  <osgi.os>win32</osgi.os>
	  <osgi.ws>win32</osgi.ws>
	  <osgi.arch>x86</osgi.arch>
	  <memoryOptions>-Xms512m -Xmx768m -XX:PermSize=256m</memoryOptions>
	  <systemProperties/>
	</properties>

	<modules>
		<module>site</module>
		<module>features</module>
		<module>plugins</module>
	</modules>

	<repositories>
	  <repository>
			<id>Design Studio Dependencies</id>
			<layout>p2</layout>
			<url>http://p2.oams.com/dependencies/9.2</url>
	  </repository>
	  <repository>
			<id>Orbit Dependencies</id>
			<layout>p2</layout>
			<url>http://p2.oams.com/orbit/9.2</url>
	  </repository>
	  <repository>
			<id>Design Studio Artifacts</id>
			<layout>p2</layout>
			<url>file://oams.com/Software/Incoming%20Packages/tmp/SDK-DS/${p2.postfix}/p2repo</url>
		</repository>
		<repository>
			<id>Odyssey</id>
			<url>http://maven.oams.com/content/groups/odyssey</url>
		</repository>
	</repositories>

          <pluginRepositories>
                  <pluginRepository>
			  <id>Sonatype Tycho Snapshots</id>
			  <url>http://repository.sonatype.org/content/repositories/snapshots/</url>
			  <snapshots>
                      <enabled>true</enabled>
                    </snapshots>
                  </pluginRepository>
<!--		      <pluginRepository>
			  <id>Odyssey</id>
			  <url>http://maven.oams.com/content/groups/odyssey</url>
			  <snapshots>
                      <enabled>true</enabled>
                    </snapshots>
		      </pluginRepository>-->
            </pluginRepositories>

	<build>
	  <plugins>
		<plugin>
			<groupId>org.sonatype.tycho</groupId>
			<artifactId>tycho-maven-plugin</artifactId>
			<version>${tycho-version}</version>
			<extensions>true</extensions>
		</plugin>

			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>maven-osgi-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<format>'v'yyyyMMdd-HHmm'-${BUILD_ALIAS}'</format>
					<archiveSite>true</archiveSite>
				</configuration>
			</plugin>

        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>target-platform-configuration</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <resolver>p2</resolver>
            <pomDependencies>consider</pomDependencies>
          </configuration>
        </plugin>

			<!-- to skip running tests (compile only) use commandline flag: -Dmaven.test.skip
				To allow all tests in a pom to pass/fail, use commandline flag: -fae (fail
				at end) -->
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>maven-osgi-test-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<!-- timeout in seconds -->
					<surefire.timeout>1800</surefire.timeout>
					<forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
					<useUIHarness>true</useUIHarness>
					<useUIThread>true</useUIThread>
					<argLine>${memoryOptions} ${systemProperties}
					</argLine>
					<!-- https://docs.sonatype.org/display/TYCHO/How+to+run+SWTBot+tests+with+Tycho -->
					<!-- set useUIThread=true for regular ui tests -->
					<!-- set useUIThread=false for swtbot tests (?) -->
					<product>org.eclipse.sdk.ide</product>
					<application>org.eclipse.ui.ide.workbench</application>
					<dependencies>
						<dependency>
							<type>p2-installable-unit</type>
							<artifactId>org.eclipse.sdk.ide</artifactId>
							<version>0.0.0</version>
						</dependency>
					</dependencies>
					<includes>
						<include>**/*TestCase.class</include>
					</includes>
					<parallel>true</parallel>
				</configuration>
			</plugin>

      </plugins>
      <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <encoding>UTF-8</encoding>
		<source>1.6</source>
            <target>1.6</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.4.1</version>
          <configuration>
            <encoding>ISO-8859-1</encoding>
          </configuration>
        </plugin>
	  <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-test-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>target-platform-configuration</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <resolver>p2</resolver>
            <pomDependencies>consider</pomDependencies>
            <environments>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
          </environments>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>2.1</version>
        </plugin>
        <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-dependency-plugin</artifactId>
          <version>2.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
